@@ -7,6 +7,10 @@
     expensive operation.
   * Match on literal after backslash in glob expression (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16068).
+  * Enable JPEG-compression for grayscale TIFF images (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16064).
+  * Don't write empty tile if tile geometry matches the image width (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=16064).
 
 2010-04-15  6.6.1-4 Cristy  <quetzlzacatenango@image...>
   * Do not set the resample virtual pixel method when undefined.
